@@ -15,15 +15,24 @@
     </properties>
 
     <dependencies>
+<<<<<<< HEAD
         <!-- Dépendances JavaFX -->
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
             <version>21.0.2</version>
+=======
+        <!-- JavaFX 17 (version stable) -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>17.0.2</version>
+>>>>>>> origin/AzizBenAmmar/GestionInterventions_Reclamations
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
+<<<<<<< HEAD
             <version>21.0.2</version>
         </dependency>
 
@@ -31,6 +40,15 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+=======
+            <version>17.0.2</version>
+        </dependency>
+
+        <!-- MySQL -->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+>>>>>>> origin/AzizBenAmmar/GestionInterventions_Reclamations
             <version>8.0.33</version>
         </dependency>
 
@@ -52,18 +70,34 @@
     </dependencies>
 
 
+<<<<<<< HEAD
 
     <build>
         <plugins>
             <!-- Plugin JavaFX -->
+=======
+    <build>
+        <plugins>
+>>>>>>> origin/AzizBenAmmar/GestionInterventions_Reclamations
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>tn.esprit.test.MainFx</mainClass>
+<<<<<<< HEAD
+=======
+                    <options>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</option>
+                    </options>
+>>>>>>> origin/AzizBenAmmar/GestionInterventions_Reclamations
                 </configuration>
             </plugin>
         </plugins>
     </build>
+<<<<<<< HEAD
 </project>
+=======
+</project>
+>>>>>>> origin/AzizBenAmmar/GestionInterventions_Reclamations
